[fix]: [CCM-12319]: Fixed Pageable request for ccmK8sConnectors (#47248)